<resources>
    <string name="app_name">TFG_Training_Marta</string>
    <string name="training_app_name">Training App</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_signin">Registro/Signin</string>
    <string name="prompt_tlfn">Número de teléfono</string>
    <string name="prompt_last_name">Primer apellido</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_signin_form">Formulario de registro</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_genre">Género</string>
    <string name="dashboard_nav_menu">Dashboard</string>
    <string name="entrenamientos_nav_menu">Entrenamientos</string>
    <string name="historial_nav_menu">Historial</string>
    <string name="idioma_nav_menu">Idioma</string>
    <string name="exit_nav_menu">Salir</string>
    <string name="settings">Configuración</string>
    <string name="usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="sample_text">Texto de ejemplo</string>
    <string name="welcome_message">Hola</string>
    <string name="today_training">Entrenamiento del día:</string>
    <string name="number_example_adapter_listview_linea_entrenamiento">1</string>
</resources>