<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:orientation="vertical"
        android:padding="8dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/prompt_signin_form"
            android:textAlignment="center"
            android:textSize="18dp">

        </TextView>

        <EditText
            android:id="@+id/user_name_txt_signin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_name"
            android:minHeight="48dp"></EditText>

        <EditText
            android:id="@+id/user_last_name_1_txt_signin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_last_name"
            android:minHeight="48dp"></EditText>


        <EditText
            android:id="@+id/user_tlfn_txt_signin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_tlfn"
            android:minHeight="48dp"></EditText>

        <EditText
            android:id="@+id/user_email_txt_signin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"></EditText>


        <EditText
            android:id="@+id/user_password_txt_signin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/gender_spinner_signin_fragment"
            android:text="@string/prompt_genre" />

        <Spinner
            android:id="@+id/gender_spinner_signin_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/prompt_genre"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/submit_btn_signin_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:enabled="true"
            android:text="@string/prompt_signin">

        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>