<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:gravity="start"
    tools:context=".fragments.login.LoginFragment">


    <EditText
        android:id="@+id/username_txt_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="Login"
        android:hint="@string/prompt_login"
        android:inputType="text"
        android:selectAllOnFocus="true"
       />

    <EditText
        android:id="@+id/password_txt_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Contraseña"
        android:hint="@string/prompt_password"
        android:imeActionLabel=""
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_txt_login_fragment" />


        <Button
            android:id="@+id/login_btn_login_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="start"
            android:enabled="true"
            android:text="@string/prompt_login"
           />
    <Button
        android:id="@+id/signin_btn_login_fragment"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:enabled="true"
        android:text="@string/prompt_signin">

    </Button>


</LinearLayout>